--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-touch": "~1.5.0",
     "angular-ui-router": "~0.2.18",
     "angular-cookies": "~1.5.0",
-    "angular-sanitize": "~1.5.0"
+    "angular-sanitize": "~1.5.0",
+    "angular-order-object-by": "^1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
